# ClawGuard

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.codex/: config.toml  project-context.md
.codex/templates/: adr-template.md  vulnerability-entry-template.md
.github/workflows/: ci.yml  npm-publish.yml  release.yml
apps/desktop/: README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_flow.rs
crates/core-engine/: Cargo.toml  README.md
crates/core-engine/src/: lib.rs  rules_store.rs
crates/core-engine/tests/: localization.rs  profile_scan.rs  rules_pack_store.rs  ruleset.rs
docs/: README.md  cicd.md  cli-installation.md  documentation-management.md  openclaw-guard-architecture.md  openclaw-guard-requirements.md  openclaw-security-insights.md  vulnerability-tracker.md
docs/08-todo/: yolo-changelog.md  yolo-state.md
docs/09-issues/active/: README.md  cli-packaging-distribution.md  desktop-shell-bootstrap.md
keys/: release-public.pem
reports/: README.md
rules/: README.md
scripts/: install-clawguard.sh  package-release.sh  test-release-package.js  uninstall-clawguard.sh
