[package]
name = "clawguard-core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
